# hist_user_tracking

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
launch/: cloud_filter.launch  cluster_detector.launch  conditional_particle_filter.launch  detectors_all.launch  fast_cluster_detector.launch  fast_cluster_detector_viewer.launch  fast_cluster_selector.launch  rviz.vcg  src_bag.launch
launch_modular/: openni_live.launch  openni_play.launch  openni_record.launch
src/: CMakeLists.txt  conditional_particle_filter.h  conditional_particle_filter_laser.h  conditional_particle_filter_laser_ros.h  image_subscriber_template.cpp  robot_wanderer.cpp  robot_wanderer_with_moving_goal.cpp  test_conditional_particle_filter.cpp  twist_stamper.cpp
src/deprecated/face_recognizer/: CMakeLists.txt  face_recognizer.cpp  face_recognizer.h  test_face_recognizer.cpp
src/deprecated/nite/: CMakeLists.txt  broadcast_skeleton_skill.cpp  broadcast_skeleton_skill.h  nite_skill.cpp  nite_skill.h  openni_tracker.cpp  test_broadcast_skeleton_skill.cpp  test_nite_skill.cpp
src/deprecated/openni/: CMakeLists.txt  cloud_filter.cpp  cluster_detector.cpp  connected_components_matcher.h  face_detector.cpp  fast_cluster_detector.cpp  fast_cluster_functions.h  fast_cluster_selector.cpp  floor_removal.cpp  opencv_people_detector.cpp  recognition_conflict_solver.h  test_connected_components_matcher.cpp
